Add hasLineContaining to OutputAssert
- Add JavaDoc
- Polish methods